Functionality for artist drag/drop to create track pool for playlist generation

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
   "AcceptedLinkTypes": [
     "playlist"
   ],
+  "ApplicationLinkTypes": [
+	"artist"
+  ],
   "BundleType": "Application",
   "BundleVersion": "0.2",
   "DefaultTabs": [
