--- a/server/SpotifyPlaylistGeneratorService/SpotifyPlaylistGeneratorService.csproj
+++ b/server/SpotifyPlaylistGeneratorService/SpotifyPlaylistGeneratorService.csproj
@@ -72,6 +72,7 @@
     <Compile Include="BusinessLayer\DataManager.cs" />
     <Compile Include="DataAccessLayer\DataProvider.cs" />
     <Compile Include="DataAccessLayer\DBAccessUtility.cs" />
+    <Compile Include="Model\PlaylistGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages\DefaultRequestHandler.aspx.cs">
       <DependentUpon>DefaultRequestHandler.aspx</DependentUpon>
@@ -81,9 +82,7 @@
       <DependentUpon>DefaultRequestHandler.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
